--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "lib": [
       "DOM",
       "ES2015",
-      "ES2018"
+      "ES2018",
+      "DOM.AsyncIterable",
     ],
     "sourceMap": false,
     "declaration": true,
