--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "idb-fs",
+  "name": "idb-filesystem-api",
   "version": "0.0.1",
   "description": "",
   "main": "./dist/lib/index.js",
